--- a/html-css/exempel/css-exempel/css/CSS-ex1.css
+++ b/html-css/exempel/css-exempel/css/CSS-ex1.css
@@ -1,3 +1,25 @@
 body {
     background-color:blue;
 }
+div {
+    width: 400px;
+    height: 400px;
+    background-color: rgb(230, 66, 66);
+    margin: 20px;
+    padding: 20px;
+    border: 5px solid ##00000:
+}
+h1{
+    font-family: Arial;
+    font-size: 50px;
+    text-align: center;
+    font-weight: bold;
+    text-decoration: underline;
+    border-bottom: burlywood 1px dashed;
+    
+}
+p{
+    font-size: 26px;
+    line-height: 1,5;
+    
+}
