--- a/html-css/exempel/css-exempel/css/CSS-ex1.css
+++ b/html-css/exempel/css-exempel/css/CSS-ex1.css
@@ -9,8 +9,11 @@ div {
     padding: 20px;
     border: 5px solid ##00000:
 }
+/* 
+{h1, p font-family: Arial;
+}
 h1{
-    font-family: Arial;
+    
     font-size: 50px;
     text-align: center;
     font-weight: bold;
@@ -21,5 +24,5 @@ h1{
 p{
     font-size: 26px;
     line-height: 1,5;
-    
+
 }
