--- a/html-css/exempel/css-exempel/css/CSS-ex1.css
+++ b/html-css/exempel/css-exempel/css/CSS-ex1.css
@@ -1,10 +1,10 @@
 body {
-    background-color:blue;
+    background-color: cornsilk;
 }
 div {
     width: 400px;
     height: 400px;
-    background-color: rgb(230, 66, 66);
+    background-color:red
     margin: 20px;
     padding: 20px;
     border: 5px solid ##00000:
